--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,7 +26,7 @@
             <input type="checkbox" id="toggleSwitch" onchange="toggleForms()">
             <span class="slider round"></span>
         </label>
-        <span id="toggleLabel">Generate by Text</span>
+        <span id="toggleLabel">Generate Recipe by Photo</span>
     </div>
     <div class="content">
         <div class="row">
@@ -46,7 +46,8 @@
                                 <input class="ingredient form-control" type="text">
                             </div>
                         </div>
-                        <button id="addIngredientButton" onclick="addIngredient()" class="btn btn-primary mb-2">Add Ingredient</button>
+                        <button id="addIngredientButton" onclick="addIngredient()" class="btn btn-primary mb-2">Add Ingredient
+                        </button>
                         <br>
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="vegetarian">
@@ -54,20 +55,29 @@
                         </div>
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="providedIngredients">
-                            <label id="providedIngredientsLabel" class="form-check-label" for="providedIngredients">Include only provided ingredients</label>
+                            <label id="providedIngredientsLabel" class="form-check-label" for="providedIngredients">Include only
+                                provided ingredients</label>
                         </div>
-                        <button id="generateRecipeButton" onclick="generateRecipe()" class="btn btn-success btn btn-primary btn-lg btn-block">Generate Recipe</button>
+                        <button id="generateRecipeButton" onclick="generateRecipe()"
+                                class="btn btn-success btn btn-primary btn-lg btn-block">Generate Recipe
+                        </button>
                     </div>
                     <div id="photoForm" style="display: none;">
                         <div class="form-group">
-                            <label for="photoUpload">Upload Photo:</label>
-                            <input type="file" id="photoUpload" name="photoUpload" class="form-control">
+                            <label id="photoUploadLabel" for="photoUpload">Upload Photo:</label>
+                            <input type="file" id="photoUpload" name="photoUpload" class="form-control"
+                                   onchange="previewImage(event)">
+                        </div>
+                        <div id="imagePreview" style="display: none; margin-top: 10px;">
+                            <img id="preview" src="" alt="Image Preview" class="img-fluid">
                         </div>
                         <div class="form-group">
                             <label id="dishTypeLabel2" for="dishType">Dish Type:</label>
                             <input type="text" id="dishType2" name="dishType" class="form-control">
                         </div>
-                        <button id="generateRecipeByPhotoButton" onclick="generateRecipeByPhoto()" class="btn btn-success btn btn-primary btn-lg btn-block">Generate Recipe by Photo</button>
+                        <button id="generateRecipeByPhotoButton" onclick="generateRecipeByPhoto()"
+                                class="btn btn-success btn btn-primary btn-lg btn-block">Generate Recipe by Photo
+                        </button>
                     </div>
                 </div>
             </div>
@@ -87,6 +97,10 @@
                     <ul id="recipeIngredients" style="display: none;"></ul>
                     <h3 id="instructionsTitle" style="display: none;"></h3>
                     <p id="instructions" style="display: none;"></p>
+                    <h3 id="nutritionTitle" style="display: none;"></h3>
+                    <p id="protein" style="display: none;"></p>
+                    <p id="fat" style="display: none;"></p>
+                    <p id="carbohydrates" style="display: none;"></p>
                 </div>
             </div>
         </div>
